Added stacked bar chart and pie chart using angular directives and d3.

--- a/pointy-web/src/main/webapp/app/css/app.css
+++ b/pointy-web/src/main/webapp/app/css/app.css
@@ -28,3 +28,26 @@ select, textarea {
   padding-left:6px;
   cursor:pointer;
 }
+
+/* Added with d3 charts */
+body {
+  font: 14px Helvetica Neue;
+  text-rendering: optimizeLegibility;
+  margin-top: 1em;
+  overflow-y: scroll;
+}
+.label {
+  font-size: .65em;
+}
+body {
+  width: 960px;
+  margin: auto;
+}
+h1 {
+  font-size: 36px;
+  font-weight: 300;
+  margin-bottom: .3em;
+}
+.error {
+  color: red;
+}
